--- a/CharMagic/CharMagic.csproj
+++ b/CharMagic/CharMagic.csproj
@@ -76,6 +76,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Crucio.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="UltimateFactory.cs" />
     <Page Include="MainWindow.xaml">
